--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libs/hbb_common"]
 	path = libs/hbb_common
-	url = https://github.com/rustdesk/hbb_common
+	url = https://github.com/Stevebell-sp/hbb_common
 [submodule "hbb_common"]
 	path = hbb_common
 	url = https://github.com/Stevebell-sp/hbb_common
